--- a/src/JurisTempus/Views/Home/ClientEditor.cshtml
+++ b/src/JurisTempus/Views/Home/ClientEditor.cshtml
@@ -1,27 +1,26 @@
-@{
-  ViewData["Title"] = "Client Editor";
-}
-  <div class="row">
-    <div class="col-8 offset-2">
-      <h3>Client Editor</h3>
-      <form method="post">
-        <input type="hidden" />
-        <div class="form-group">
-          <label></label>
-          <input class="form-control" />
-        </div>
-        <div class="form-group">
-          <label></label>
-          <input class="form-control"/>
-        </div>
-        <div class="form-group">
-          <label></label>
-          <input class="form-control" />
-        </div>
-        <div class="form-group">
-          <a asp-action="Index" class="btn btn-info">Cancel</a>
-          <input type="submit" value="Save" class="btn btn-primary" />
-        </div>
-      </form>
-    </div>
+@{ ViewData["Title"] = "Client Editor"; }
+@model ClientViewModel
+<div class="row">
+  <div class="col-8 offset-2">
+    <h3>Client Editor</h3>
+    <form method="post">
+      <input type="hidden" asp-for="Id"/>
+      <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+      </div>
+      <div class="form-group">
+        <label asp-for="ContactName"></label>
+        <input asp-for="ContactName" class="form-control" />
+      </div>
+      <div class="form-group">
+        <label asp-for="Phone"></label>
+        <input asp-for="Phone" class="form-control" />
+      </div>
+      <div class="form-group">
+        <a asp-action="Index" class="btn btn-info">Cancel</a>
+        <input type="submit" value="Save" class="btn btn-primary" />
+      </div>
+    </form>
   </div>
+</div>
